Unread messages updating, messages text wrap fix

--- a/src/pages/messenger.css
+++ b/src/pages/messenger.css
@@ -97,6 +97,9 @@
     align-items: center;
     gap: 1rem;
     box-shadow: 0px 1rem 1.5rem 12px var(--bg-color);
+    text-wrap: nowrap;
+    max-width: 100vw;
+    overflow: hidden;
     z-index: 1;
     transition: box-shadow 1s ease;
 }
